--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN5fiwMvf3iK9xHo6ljoMkZ",
+      "authorship_tag": "ABX9TyOpeNq2mddnsZ7aLHrZrRtZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "Ivafqztuo-Os",
         "colab_type": "code",
-        "outputId": "37ef22bc-6fde-499d-8313-bc96e2e730af",
+        "outputId": "a7e77316-110d-4e4d-9e8b-79c07e61cc80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -78,9 +78,10 @@
         "    except request.HTTPError as e:\n",
         "        print(e)\n",
         "\n",
-        "print(getAllUrl(url))\n"
+        "print(getAllUrl(url))\n",
+        "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,14 +97,16 @@
       "metadata": {
         "id": "t60DWdLQpTfg",
         "colab_type": "code",
-        "outputId": "8d9f4740-63bb-4aa7-fa00-8717deb820c7",
+        "outputId": "dd8348fc-091c-49d0-c006-a99d9dce1dda",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
       "source": [
-        "# run counter\n",
+        "# run counter, create output table\n",
+        "\n",
+        "table = {'website': [], 'number of mentioning':[] , 'website size':[] }\n",
         "\n",
         "for url in getAllUrl(url):\n",
         "  try: \n",
@@ -122,130 +125,260 @@
         "   counter = 0\n",
         "   for item in x:\n",
         "    counter += 1\n",
+        "   redditAll = soup.find_all(\"a\")\n",
         "  \n",
+        "   table['website'].append(url)\n",
+        "   table['number of mentioning'].append(counter)\n",
+        "   table['website size'].append(len(redditAll))\n",
+        "  \n",
+        "  print(url)\n",
+        "  print(len(redditAll))\n",
         "  print(counter)\n",
+        "  print('--')\n",
+        "\n",
+        "df = pd.DataFrame(data = table)\n",
+        "print(df)\n",
         "  "
       ],
-      "execution_count": 2,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "http://www.ebizmba.com/\n",
+            "70\n",
             "18\n",
+            "--\n",
+            "http://www.ebizmba.com/directory#admin\n",
+            "143\n",
             "42\n",
+            "--\n",
+            "http://www.ebizmba.com/directory#design\n",
+            "143\n",
             "42\n",
+            "--\n",
+            "http://www.ebizmba.com/directory#marketing\n",
+            "143\n",
             "42\n",
+            "--\n",
+            "http://www.ebizmba.com/directory#ecommerce\n",
+            "143\n",
             "42\n",
+            "--\n",
+            "http://www.ebizmba.com/directory\n",
+            "143\n",
             "42\n",
+            "--\n",
+            "http://www.ebizmba.com/directory#media\n",
+            "143\n",
             "42\n",
+            "--\n",
+            "http://www.ebizmba.com/directory#research\n",
+            "143\n",
             "42\n",
+            "--\n",
+            "javascript:bookmarksite('eBizMBA | The eBusiness Knowledgebase', 'http://www.ebizmba.com')\n",
+            "143\n",
             "42\n",
+            "--\n",
+            "http://www.ebizmba.com/terms\n",
+            "61\n",
             "7\n",
+            "--\n",
+            "http://www.ebizmba.com/privacy\n",
+            "61\n",
             "10\n",
-            "128\n",
-            "0\n",
-            "1\n",
-            "71\n",
-            "67\n",
-            "0\n",
-            "1\n",
-            "71\n",
-            "2\n",
-            "0\n",
-            "1\n",
-            "71\n",
-            "24\n",
-            "0\n",
-            "1\n",
-            "73\n",
-            "50\n",
-            "0\n",
-            "1\n",
-            "72\n",
-            "84\n",
-            "0\n",
-            "1\n",
-            "85\n",
-            "26\n",
-            "0\n",
-            "1\n",
-            "81\n",
-            "188\n",
-            "0\n",
-            "1\n",
-            "73\n",
-            "57\n",
-            "0\n",
-            "1\n",
-            "79\n",
-            "54\n",
-            "0\n",
-            "1\n",
-            "73\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/best-flash-sites\n",
+            "68\n",
             "11\n",
-            "0\n",
-            "1\n",
-            "73\n",
-            "32\n",
-            "0\n",
-            "1\n",
-            "78\n",
-            "104\n",
-            "0\n",
-            "1\n",
-            "69\n",
-            "18\n",
-            "0\n",
-            "1\n",
-            "75\n",
-            "1\n",
-            "0\n",
-            "1\n",
-            "78\n",
-            "11\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/best-html5-websites\n",
+            "68\n",
             "13\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/blogs\n",
+            "76\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/business-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/car-websites\n",
+            "118\n",
             "25\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/coupon-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/dating-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/design-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/ebusiness-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/file-sharing-websites\n",
+            "118\n",
             "25\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/funny-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/gadget-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/game-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/gossip-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/health-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/job-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/kids-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/media-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/most-popular-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/movie-websites\n",
+            "118\n",
             "25\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/music-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/news-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/people-search\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/personal-finance-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/photo-sharing-sites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/political-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/real-estate-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/recipe-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/reference-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/science-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/search-engines\n",
+            "118\n",
             "26\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/seo-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/shopping-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/social-bookmarking-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/social-networking-websites\n",
+            "73\n",
             "7\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/sports-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/travel-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/video-game-websites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/video-websites\n",
+            "118\n",
             "24\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/viral-sites\n",
+            "118\n",
             "23\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/web-2.0-websites\n",
+            "118\n",
             "22\n",
+            "--\n",
+            "http://www.ebizmba.com/articles/web-hosting\n",
+            "66\n",
             "16\n",
+            "--\n",
+            "http://www.ebizmba.com/company\n",
+            "62\n",
             "3\n",
-            "3\n"
+            "--\n",
+            "http://www.ebizmba.com/contact\n",
+            "59\n",
+            "3\n",
+            "--\n",
+            "                            website  number of mentioning  website size\n",
+            "0           http://www.ebizmba.com/                    18            70\n",
+            "1           http://www.ebizmba.com/                    18            70\n",
+            "2           http://www.ebizmba.com/                    18            70\n",
+            "3           http://www.ebizmba.com/                    18            70\n",
+            "4           http://www.ebizmba.com/                    18            70\n",
+            "..                              ...                   ...           ...\n",
+            "325  http://www.ebizmba.com/contact                     3            59\n",
+            "326  http://www.ebizmba.com/contact                     3            59\n",
+            "327  http://www.ebizmba.com/contact                     3            59\n",
+            "328  http://www.ebizmba.com/contact                     3            59\n",
+            "329  http://www.ebizmba.com/contact                     3            59\n",
+            "\n",
+            "[330 rows x 3 columns]\n"
           ],
           "name": "stdout"
         }
